--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foodshop",
-  "homepage": "http://mcleodoteng.github.io/Burger.github.io",
+  "homepage": "http://mcleodoteng.github.io/MyFoodApp.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
